cabal-version:      3.0

name:           postgresql-migration-persistent
version:        1.1.0
homepage:       https://github.com/jappeace/postgresql-migration-persistent#readme
bug-reports:    https://github.com/jappeace/postgresql-migration-persistent/issues
author:         Jappie Klooster, Jean-Paul Calderone 
maintainer:     hi@jappie.me
synopsis:       A PostgreSQL persistent schema migration utility
description:    Wraps postgresql migration and persistent to make sure the persistent schema
                aligns with what's in the database.
                If not, it returns a list of suggested manual migrations
                to be put in postgresql-migration.
copyright:      2025 Jappie Klooster
license:        MIT
license-file:   LICENSE
build-type:     Simple
category:       Database
extra-source-files:
    Readme.md
    LICENSE
extra-doc-files:
    Changelog.md

source-repository head
  type: git
  location: https://github.com/jappeace/postgresql-migration-persistent

common common-options
  default-extensions: 
      EmptyCase
      FlexibleContexts
      FlexibleInstances
      InstanceSigs
      MultiParamTypeClasses
      LambdaCase
      MultiWayIf
      NamedFieldPuns
      TupleSections
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      DerivingStrategies
      GeneralizedNewtypeDeriving
      StandaloneDeriving
      OverloadedStrings
      TypeApplications
      NumericUnderscores
      ImportQualifiedPost

  ghc-options:
    -Wall -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Widentities -Wredundant-constraints
    -Wcpp-undef -fwarn-tabs -Wpartial-fields
    -fdefer-diagnostics -Wunused-packages
    -fenable-th-splice-warnings
    -fno-omit-yields
    -threaded 

  build-depends:
      base >=4.9.1.0 && <5,
      postgresql-migration <0.3,
      persistent-postgresql <3,
      persistent <3,
      postgresql-simple <1,
      text <3,
      resource-pool <0.5 || ^>=0.5.0,
      mtl <3

  default-language: Haskell2010

library
  import: common-options
  exposed-modules:
      PostgreSQL.Migration.Persistent
  hs-source-dirs:
      src
